add section at C000 for samples

--- a/kttgm.cfg
+++ b/kttgm.cfg
@@ -20,6 +20,7 @@ SEGMENTS {
     HEADER:	load = HDR, type = ro;
     CODE:	load = PRG, type = ro,  start = $8000;
     RODATA:	load = PRG, type = ro;
+    SAMPLE:	load = PRG, type = ro,  start = $C000;
     VECTORS:	load = PRG, type = ro,  start = $FFFA;
     TILES:	load = CHR, type = ro;
 }
